--- a/src/app/components/forms/user-details-form/user-details-form.component.html
+++ b/src/app/components/forms/user-details-form/user-details-form.component.html
@@ -84,44 +84,13 @@
     </input-error>
   </div>
 
-  <h3 class="ui dividing header">
-    {{'user.settings.form.bank.details.header' | translate}}
-  </h3>
+  <h3 class="ui dividing header">{{'user.settings.form.bank.details.header' | translate}}</h3>
 
-  <div class="field">
-    <sm-input
-      [control]="settingsForm.controls['account_clearing_number']"
-      [label]="'user.settings.form.clearing.number.label' | translate"
-      [placeholder]="'user.settings.form.clearing.number.placeholder' | translate"
-      class="left"
-      type="text">
-    </sm-input>
-    <input-errors
-      apiAttribute="account_clearing_number"
-      [control]="settingsForm.controls['account_clearing_number']"
-      [apiErrors]="apiErrors">
-    </input-errors>
-  </div>
-
-  <div class="field">
-    <sm-input
-      [control]="settingsForm.controls['account_number']"
-      [label]="'user.settings.form.account.number.label' | translate"
-      [placeholder]="'user.settings.form.account.number.placeholder' | translate"
-      class="left"
-      type="text">
-    </sm-input>
-    <input-errors
-      apiAttribute="account_number"
-      [control]="settingsForm.controls['account_number']"
-      [apiErrors]="apiErrors">
-    </input-errors>
-    <!-- The API can return errors for account, which isn't bound to any instance of form control -->
-    <api-errors
-      [errors]="apiErrors"
-      apiAttribute="account">
-    </api-errors>
-  </div>
+  <user-bank-account-input
+    [accountClearingNumberControl]="settingsForm.controls['account_clearing_number']"
+    [accountNumberControl]="settingsForm.controls['account_number']"
+    [apiErrors]="apiErrors">
+  </user-bank-account-input>
 
   <div class="user-details-form-button-container">
     <div
