Margin fix for views/home.component section

--- a/src/app/views/home/home.component.scss
+++ b/src/app/views/home/home.component.scss
@@ -182,7 +182,8 @@ $job-card-border-radius: 8px;
 
       .home-instructions-button {
         width: calc(100% - 8em);
-        margin: 4em;
+        margin-bottom: 2em;
+        margin-left: 4em;
         position: absolute;
         left: 0;
         bottom: 0;
