--- a/src/app/components/job-list-item/job-list-item.component.html
+++ b/src/app/components/job-list-item/job-list-item.component.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="job-meta-details">
-    <p class="job-list-container-header">{{job.name}}</p>
+    <p class="job-list-container-header">{{job.translated.name}}</p>
     <p class="adress-field" >
       <i class="fa fa-map-marker" aria-hidden="true"></i>  {{job.address}}
     </p>
