Rename home-top-banner component to welcome-header component.

--- a/src/app/components/headers/welcome-header/welcome-header.component.scss
+++ b/src/app/components/headers/welcome-header/welcome-header.component.scss
@@ -1,8 +1,8 @@
-@import '../../styles/colors';
-@import '../../styles/dimensions';
-@import '../../styles/typography';
+@import '../../../styles/colors';
+@import '../../../styles/dimensions';
+@import '../../../styles/typography';
 
-.home-header-container {
+.welcome-header-container {
   background: linear-gradient($color-cerise-600, $color-primary-cerise);
   color: $white;
   display: flex;
@@ -12,7 +12,7 @@
     flex-flow: column;
   }
 
-  .home-header-map-image {
+  .welcome-header-map-image {
     width: 426px;
     padding-right: 0;
 
@@ -25,7 +25,7 @@
     }
   }
 
-  .home-header-info-container {
+  .welcome-header-info-container {
     width: calc(100% - 426px);
     padding: 40px;
     text-align: left;
@@ -39,27 +39,27 @@
       width: auto;
     }
 
-    .home-header-info-title {
+    .welcome-header-info-title {
       @include wrap-long-words;
       color: $white;
       text-shadow: 0 0 3px rgba(0, 0, 0, .75);
     }
 
-    .home-header-info-subtitle {
+    .welcome-header-info-subtitle {
       padding-top: 1em;
       padding-bottom: .2em;
     }
 
-    .home-header-info-description-container {
+    .welcome-header-info-description-container {
       margin: 0 auto;
       font-size: 14px;
     }
 
-    .home-header-button-container {
+    .welcome-header-button-container {
       display: inline-block;
       margin-top: 20px;
 
-      .home-header-button {
+      .welcome-header-button {
         position: relative;
         width: 100%;
         margin-left: 0;
@@ -67,7 +67,7 @@
     }
   }
 
-  .home-header-info-container-logged-in {
+  .welcome-header-info-container-logged-in {
     padding-top: 100px;
     padding-left: 150px;
 
