--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="home-container">
-  <home-top-banner [JaRoutes]="JaRoutes" [user]="user"></home-top-banner>
+  <welcome-header [user]="user"></welcome-header>
 
   <div class="home-jobs-slider-container home-jobs-slider-new-jobs-container">
     <div class="home-jobs-slider-new-jobs-title">
