--- a/src/app/components/forms/register-form/register-form.component.html
+++ b/src/app/components/forms/register-form/register-form.component.html
@@ -32,25 +32,10 @@
     [apiErrors]="apiErrors">
   </phone-input>
 
-  <div class="field">
-    <sm-select
-     [control]="registerForm.controls['gender']"
-     [data]="genders | async"
-     [label]="('user.register.form.gender.header' | translate) + ' *'"
-     [placeholder]="'user.register.form.gender.placeholder' | translate"
-     class="fluid">
-      <option
-        [value]="gender.id"
-        *ngFor="let gender of genders | async">
-        {{gender.name}}
-      </option>
-    </sm-select>
-    <input-errors
-      [apiErrors]="apiErrors"
-      [control]="registerForm.controls['gender']"
-      apiAttribute="gender">
-    </input-errors>
-  </div>
+  <gender-input
+    [control]="registerForm.controls['gender']"
+    [apiErrors]="apiErrors">
+  </gender-input>
 
   <h3 class="ui dividing header">
     {{'user.register.form.address.section.header' | translate}}
