--- a/src/app/components/forms/register-form/register-form.component.html
+++ b/src/app/components/forms/register-form/register-form.component.html
@@ -72,29 +72,10 @@
     </input-errors>
   </div>
 
-  <div class="field">
-    <sm-select
-     [control]="registerForm.controls['language']"
-     [data]="systemLanguages | async"
-     [label]="('user.register.form.default.language.header' | translate) + ' *'"
-     [placeholder]="'user.register.form.default.language.placeholder' | translate"
-     class="fluid search">
-      <option
-        [value]="language.id"
-        *ngFor="let language of systemLanguages | async">
-        {{language.translated.name}}
-      </option>
-    </sm-select>
-    <input-errors
-      [apiErrors]="apiErrors"
-      [control]="registerForm.controls['language']"
-      apiAttribute="language">
-    </input-errors>
-    <div
-      class="ui pointing grey basic label">
-      {{'user.register.form.default.language.description' | translate}}
-    </div>
-  </div>
+  <system-language-input
+    [control]="registerForm.controls['language']"
+    [apiErrors]="apiErrors">
+  </system-language-input>
 
   <div class="field">
     <sm-select
