--- a/src/app/components/forms/register-form/register-form.component.html
+++ b/src/app/components/forms/register-form/register-form.component.html
@@ -77,25 +77,10 @@
     [apiErrors]="apiErrors">
   </system-language-input>
 
-  <div class="field">
-    <sm-select
-     [control]="registerForm.controls['country_of_origin']"
-     [data]="countries | async"
-     [label]="('user.register.form.country.of.origin.header' | translate) + ' *'"
-     [placeholder]="'user.register.form.country.of.origin.placeholder' | translate"
-     class="fluid search">
-      <option
-        [value]="country.countryCode"
-        *ngFor="let country of countries | async">
-        {{country.translated.name}}
-      </option>
-    </sm-select>
-    <input-errors
-      [apiErrors]="apiErrors"
-      [control]="registerForm.controls['country_of_origin']"
-      apiAttribute="country_of_origin">
-    </input-errors>
-  </div>
+  <country-of-origin-input
+    [control]="registerForm.controls['country_of_origin']"
+    [apiErrors]="apiErrors">>
+  </country-of-origin-input>
 
   <h3 class="ui dividing header">
     {{'user.register.form.password.section.header' | translate}}
