--- a/src/app/components/forms/register-form/register-form.component.html
+++ b/src/app/components/forms/register-form/register-form.component.html
@@ -81,8 +81,8 @@
   </terms-input>
 
   <form-submit-button
-    [submitFail]="saveFail"
-    [submitSuccess]="saveSuccess"
+    [submitFail]="submitFail"
+    [submitSuccess]="submitSuccess"
     [buttonText]="'user.register.form.submit.button' | translate">
   </form-submit-button>
 </form>
