--- a/src/app/components/forms/reset-password-form/reset-password-form.component.html
+++ b/src/app/components/forms/reset-password-form/reset-password-form.component.html
@@ -23,22 +23,14 @@
     </input-errors>
   </div>
 
-  <div class="reset-password-form-button-container">
-    <div
-      *ngIf="displayErrorMessage"
-      class="error-message">
-      {{'reset.password.form.submit.error' | translate}}
-    </div>
-    <button
-      [disabled]="!resetPasswordForm.valid"
-      type="submit"
-      class="reset-password-form-button btn-primary btn-small btn">
-      {{'reset.password.form.submit.button' | translate}}
-    </button>
+  <form-submit-button
+    [submitFail]="submitFail"
+    [submitSuccess]="submitSuccess"
+    [buttonText]="'reset.password.form.submit.button' | translate">
     <input-errors
       [apiErrors]="apiErrors"
       [control]="resetPasswordForm.controls['one_time_token']"
       apiAttribute="one_time_token">
     </input-errors>
-  </div>
+  </form-submit-button>
 </form>
