--- a/src/app/components/forms/forgot-password-form/forgot-password-form.component.html
+++ b/src/app/components/forms/forgot-password-form/forgot-password-form.component.html
@@ -11,7 +11,6 @@
 
   <div class="field">
     <sm-input
-      (keyup.enter)="onEnterKeyUp()"
       [control]="forgotPasswordForm.controls['email_or_phone']"
       [placeholder]="'forgot.password.form.email.or.phone.placeholder' | translate"
       class="left"
@@ -26,23 +25,16 @@
     </input-errors>
   </div>
 
-  <div class="forgot-password-form-button-container">
-    <div
-      *ngIf="displayErrorMessage"
-      class="error-message">
-      {{'forgot.password.submit.error' | translate}}
+  <form-submit-button
+    [submitFail]="submitFail"
+    [submitSuccess]="submitSuccess"
+    [buttonText]="'contact.form.submit.button' | translate">
+    <div>
+      <a
+        class="forgot-password-form-link"
+        routerLink="{{JARoutes.login.url()}}">
+        {{'forgot.password.login.link' | translate}}
+      </a>
     </div>
-    <button
-      [disabled]="!forgotPasswordForm.valid"
-      *ngIf="!loadingSubmit"
-      class="btn-primary btn-small btn forgot-password-form-button"
-      type="submit">
-      {{'forgot.password.form.submit.button' | translate}}
-    </button>
-    <a
-      class="forgot-password-form-link"
-      routerLink="{{JARoutes.login.url()}}">
-      {{'forgot.password.login.link' | translate}}
-    </a>
-  </div>
+  </form-submit-button>
 </form>
