--- a/src/app/components/forms/login-form/login-form.component.html
+++ b/src/app/components/forms/login-form/login-form.component.html
@@ -38,22 +38,21 @@
     </input-errors>
   </div>
 
-
-  <div class="login-form-button-container">
-    <button
-      type="submit"
-      class="login-form-button btn-primary btn-small btn">
-      {{'login.form.submit.button' | translate}}
-    </button>
-    <a
-      class="login-form-link fs-m0"
-      routerLink="{{JARoutes.forgotPassword.url()}}">
-      {{'login.form.forgot.password.link' | translate}}
-    </a>
-    <a
-      class="login-form-link fs-m0"
-      routerLink="{{JARoutes.registerUser.url()}}">
-      {{'login.form.register.link' | translate}}
-    </a>
-  </div>
+  <form-submit-button
+    [submitFail]="submitFail"
+    [submitSuccess]="submitSuccess"
+    [buttonText]="'login.form.submit.button' | translate">
+    <div>
+      <a
+        class="login-form-link"
+        routerLink="{{JARoutes.forgotPassword.url()}}">
+        {{'login.form.forgot.password.link' | translate}}
+      </a>
+      <a
+        class="login-form-link"
+        routerLink="{{JARoutes.registerUser.url()}}">
+        {{'login.form.register.link' | translate}}
+      </a>
+    </div>
+  </form-submit-button>
 </form>
