--- a/src/app/components/forms/user-profile-form/user-profile-form.component.html
+++ b/src/app/components/forms/user-profile-form/user-profile-form.component.html
@@ -471,10 +471,9 @@
     </div>
   </div>
 
-  <div class="profile-form-button-container">
-    <div *ngIf="saveFail" class="profile-form-error-message">{{'user.profile.form.submit.fail' | translate}}</div>
-    <div *ngIf="saveSuccess" class="profile-form-save-message">{{'user.profile.form.submit.success' | translate}}</div>
-    <loading *ngIf="loadingSubmit"></loading>
-    <button class="profile-form-button" *ngIf="!loadingSubmit" type="submit" [disabled]="!formValidation()" class="btn-primary btn-small btn">{{'user.profile.form.submit.button' | translate}}</button>
-  </div>
+  <form-submit-button
+    [submitFail]="submitFail"
+    [submitSuccess]="submitSuccess"
+    [buttonText]="'user.profile.form.submit.button' | translate">
+  </form-submit-button>
 </form>
