Added email or phone input component

--- a/src/app/components/forms/forgot-password-form/forgot-password-form.component.html
+++ b/src/app/components/forms/forgot-password-form/forgot-password-form.component.html
@@ -9,21 +9,10 @@
     text="{{'component.loading' | translate}}">
   </sm-loader>
 
-  <div class="field">
-    <sm-input
-      [control]="forgotPasswordForm.controls['email_or_phone']"
-      [placeholder]="'forgot.password.form.email.or.phone.placeholder' | translate"
-      class="left"
-      icon="mail"
-      maxlength="256"
-      type="text">
-    </sm-input>
-    <input-errors
-      [apiErrors]="apiErrors"
-      [control]="forgotPasswordForm.controls['email_or_phone']"
-      apiAttribute="email_or_phone">
-    </input-errors>
-  </div>
+  <email-or-phone-input
+    [control]="forgotPasswordForm.controls['email_or_phone']"
+    [apiErrors]="apiErrors">
+  </email-or-phone-input>
 
   <form-submit-button
     [submitFail]="submitFail"
