--- a/src/app/components/forms/reset-password-form/reset-password-form.component.html
+++ b/src/app/components/forms/reset-password-form/reset-password-form.component.html
@@ -8,20 +8,10 @@
     text="{{'component.loading' | translate}}">
   </sm-loader>
 
-  <div class="field">
-    <sm-input
-      [control]="resetPasswordForm.controls['password']"
-      [placeholder]="'reset.password.form.password.placeholder' | translate"
-      class="left"
-      icon="user"
-      type="password">
-    </sm-input>
-    <input-errors
-      [apiErrors]="apiErrors"
-      [control]="resetPasswordForm.controls['password']"
-      apiAttribute="password">
-    </input-errors>
-  </div>
+  <password-input
+    [control]="resetPasswordForm.controls['password']"
+    [apiErrors]="apiErrors">
+  </password-input>
 
   <form-submit-button
     [submitFail]="submitFail"
